# AlgoCpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
all/: CMakeLists.txt
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
examples/: CMakeLists.txt
examples/basicExample/: CMakeLists.txt  main.cpp
examples/source/: main.cpp
include/AlgoCpp/: algorithms.hpp
include/AlgoCpp/Algorithms/Sorting/: BubbleSort.hpp
include/AlgoCpp/algorithms/search/: binarySearch.hpp  linearSearch.hpp
include/AlgoCpp/algorithms/sorting/: bubbleSort.hpp
tests/: Benchmark.cpp  BubbleSort.cpp  CMakeLists.txt  TextToBin.cpp  benchmark.cpp  main.cpp
tests/search/: binarySearch.cpp  linearSearch.cpp
tests/sorting/: bubbleSort.cpp
